crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__E202_E20.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E20.py:19:23: E202 (whitespace-before-close-bracket) [*] Whitespace before ')'
   |
18 | #: E202:1:23
19 | spam(ham[1], {eggs: 2} )
   |                       ^ E202 (whitespace-before-close-bracket)
20 | #: E202:1:22
21 | spam(ham[1], {eggs: 2 })
   |
   = help: Remove whitespace before ')'

ℹ Safe fix
16 16 | 
17 17 | 
18 18 | #: E202:1:23
19    |-spam(ham[1], {eggs: 2} )
   19 |+spam(ham[1], {eggs: 2})
20 20 | #: E202:1:22
21 21 | spam(ham[1], {eggs: 2 })
22 22 | #: E202:1:11

E20.py:21:22: E202 (whitespace-before-close-bracket) [*] Whitespace before '}'
   |
19 | spam(ham[1], {eggs: 2} )
20 | #: E202:1:22
21 | spam(ham[1], {eggs: 2 })
   |                      ^ E202 (whitespace-before-close-bracket)
22 | #: E202:1:11
23 | spam(ham[1 ], {eggs: 2})
   |
   = help: Remove whitespace before '}'

ℹ Safe fix
18 18 | #: E202:1:23
19 19 | spam(ham[1], {eggs: 2} )
20 20 | #: E202:1:22
21    |-spam(ham[1], {eggs: 2 })
   21 |+spam(ham[1], {eggs: 2})
22 22 | #: E202:1:11
23 23 | spam(ham[1 ], {eggs: 2})
24 24 | #: E202:1:23

E20.py:23:11: E202 (whitespace-before-close-bracket) [*] Whitespace before ']'
   |
21 | spam(ham[1], {eggs: 2 })
22 | #: E202:1:11
23 | spam(ham[1 ], {eggs: 2})
   |           ^ E202 (whitespace-before-close-bracket)
24 | #: E202:1:23
25 | spam(ham[1], {eggs: 2}  )
   |
   = help: Remove whitespace before ']'

ℹ Safe fix
20 20 | #: E202:1:22
21 21 | spam(ham[1], {eggs: 2 })
22 22 | #: E202:1:11
23    |-spam(ham[1 ], {eggs: 2})
   23 |+spam(ham[1], {eggs: 2})
24 24 | #: E202:1:23
25 25 | spam(ham[1], {eggs: 2}	)
26 26 | #: E202:1:22

E20.py:25:23: E202 (whitespace-before-close-bracket) [*] Whitespace before ')'
   |
23 | spam(ham[1 ], {eggs: 2})
24 | #: E202:1:23
25 | spam(ham[1], {eggs: 2}  )
   |                       ^^ E202 (whitespace-before-close-bracket)
26 | #: E202:1:22
27 | spam(ham[1], {eggs: 2   })
   |
   = help: Remove whitespace before ')'

ℹ Safe fix
22 22 | #: E202:1:11
23 23 | spam(ham[1 ], {eggs: 2})
24 24 | #: E202:1:23
25    |-spam(ham[1], {eggs: 2}	)
   25 |+spam(ham[1], {eggs: 2})
26 26 | #: E202:1:22
27 27 | spam(ham[1], {eggs: 2	})
28 28 | #: E202:1:11

E20.py:27:22: E202 (whitespace-before-close-bracket) [*] Whitespace before '}'
   |
25 | spam(ham[1], {eggs: 2}  )
26 | #: E202:1:22
27 | spam(ham[1], {eggs: 2   })
   |                      ^^^ E202 (whitespace-before-close-bracket)
28 | #: E202:1:11
29 | spam(ham[1  ], {eggs: 2})
   |
   = help: Remove whitespace before '}'

ℹ Safe fix
24 24 | #: E202:1:23
25 25 | spam(ham[1], {eggs: 2}	)
26 26 | #: E202:1:22
27    |-spam(ham[1], {eggs: 2	})
   27 |+spam(ham[1], {eggs: 2})
28 28 | #: E202:1:11
29 29 | spam(ham[1	], {eggs: 2})
30 30 | #: Okay

E20.py:29:11: E202 (whitespace-before-close-bracket) [*] Whitespace before ']'
   |
27 | spam(ham[1], {eggs: 2   })
28 | #: E202:1:11
29 | spam(ham[1  ], {eggs: 2})
   |           ^^ E202 (whitespace-before-close-bracket)
30 | #: Okay
31 | spam(ham[1], {eggs: 2})
   |
   = help: Remove whitespace before ']'

ℹ Safe fix
26 26 | #: E202:1:22
27 27 | spam(ham[1], {eggs: 2	})
28 28 | #: E202:1:11
29    |-spam(ham[1	], {eggs: 2})
   29 |+spam(ham[1], {eggs: 2})
30 30 | #: Okay
31 31 | spam(ham[1], {eggs: 2})
32 32 | 

E20.py:116:18: E202 (whitespace-before-close-bracket) [*] Whitespace before ']'
    |
114 | # F-strings
115 | f"{ {'a': 1} }"
116 | f"{[ { {'a': 1} } ]}"
    |                  ^ E202 (whitespace-before-close-bracket)
117 | f"normal { {f"{ { [1, 2] } }" } } normal"
    |
    = help: Remove whitespace before ']'

ℹ Safe fix
113 113 | 
114 114 | # F-strings
115 115 | f"{ {'a': 1} }"
116     |-f"{[ { {'a': 1} } ]}"
    116 |+f"{[ { {'a': 1} }]}"
117 117 | f"normal { {f"{ { [1, 2] } }" } } normal"
118 118 | 
119 119 | #: Okay

E20.py:172:12: E202 (whitespace-before-close-bracket) [*] Whitespace before ']'
    |
171 | #: E202:1:12
172 | ham[upper : ]
    |            ^ E202 (whitespace-before-close-bracket)
173 |
174 | #: E203:1:10
    |
    = help: Remove whitespace before ']'

ℹ Safe fix
169 169 | ham[upper :]
170 170 | 
171 171 | #: E202:1:12
172     |-ham[upper : ]
    172 |+ham[upper :]
173 173 | 
174 174 | #: E203:1:10
175 175 | ham[upper  :]
