crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__E262_E26.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E26.py:4:12: E262 (no-space-after-inline-comment) [*] Inline comment should start with `# `
  |
2 | pass # an inline comment
3 | #: E262:1:12
4 | x = x + 1  #Increment x
  |            ^^^^^^^^^^^^ E262 (no-space-after-inline-comment)
5 | #: E262:1:12
6 | x = x + 1  #  Increment x
  |
  = help: Format space

ℹ Safe fix
1 1 | #: E261:1:5
2 2 | pass # an inline comment
3 3 | #: E262:1:12
4   |-x = x + 1  #Increment x
  4 |+x = x + 1  # Increment x
5 5 | #: E262:1:12
6 6 | x = x + 1  #  Increment x
7 7 | #: E262:1:12

E26.py:6:12: E262 (no-space-after-inline-comment) [*] Inline comment should start with `# `
  |
4 | x = x + 1  #Increment x
5 | #: E262:1:12
6 | x = x + 1  #  Increment x
  |            ^^^^^^^^^^^^^^ E262 (no-space-after-inline-comment)
7 | #: E262:1:12
8 | x = y + 1  #:  Increment x
  |
  = help: Format space

ℹ Safe fix
3 3 | #: E262:1:12
4 4 | x = x + 1  #Increment x
5 5 | #: E262:1:12
6   |-x = x + 1  #  Increment x
  6 |+x = x + 1  # Increment x
7 7 | #: E262:1:12
8 8 | x = y + 1  #:  Increment x
9 9 | #: E265:1:1

E26.py:8:12: E262 (no-space-after-inline-comment) [*] Inline comment should start with `# `
   |
 6 | x = x + 1  #  Increment x
 7 | #: E262:1:12
 8 | x = y + 1  #:  Increment x
   |            ^^^^^^^^^^^^^^^ E262 (no-space-after-inline-comment)
 9 | #: E265:1:1
10 | #Block comment
   |
   = help: Format space

ℹ Safe fix
5 5 | #: E262:1:12
6 6 | x = x + 1  #  Increment x
7 7 | #: E262:1:12
8   |-x = y + 1  #:  Increment x
  8 |+x = y + 1  #: Increment x
9 9 | #: E265:1:1
10 10 | #Block comment
11 11 | a = 1

E26.py:63:9: E262 (no-space-after-inline-comment) [*] Inline comment should start with `# `
   |
61 | # -*- coding: utf8 -*-
62 | #  (One space one NBSP) Ok for block comment
63 | a = 42  #  (One space one NBSP)
   |         ^^^^^^^^^^^^^^^^^^^^^^^ E262 (no-space-after-inline-comment)
64 | #: E262:2:9
65 | #  (Two spaces) Ok for block comment
   |
   = help: Format space

ℹ Safe fix
60 60 | #: E262:3:9
61 61 | # -*- coding: utf8 -*-
62 62 | #  (One space one NBSP) Ok for block comment
63    |-a = 42  #  (One space one NBSP)
   63 |+a = 42  # (One space one NBSP)
64 64 | #: E262:2:9
65 65 | #  (Two spaces) Ok for block comment
66 66 | a = 42  #  (Two spaces)

E26.py:66:9: E262 (no-space-after-inline-comment) [*] Inline comment should start with `# `
   |
64 | #: E262:2:9
65 | #  (Two spaces) Ok for block comment
66 | a = 42  #  (Two spaces)
   |         ^^^^^^^^^^^^^^^ E262 (no-space-after-inline-comment)
67 |
68 | #: E265:5:1
   |
   = help: Format space

ℹ Safe fix
63 63 | a = 42  #  (One space one NBSP)
64 64 | #: E262:2:9
65 65 | #  (Two spaces) Ok for block comment
66    |-a = 42  #  (Two spaces)
   66 |+a = 42  # (Two spaces)
67 67 | 
68 68 | #: E265:5:1
69 69 | ### Means test is not done yet

E26.py:84:8: E262 (no-space-after-inline-comment) [*] Inline comment should start with `# `
   |
82 | ##  Foo
83 |
84 | a = 1  ## Foo
   |        ^^^^^^ E262 (no-space-after-inline-comment)
85 |
86 | a = 1  #:Foo
   |
   = help: Format space

ℹ Safe fix
81 81 | #: E266:1:3
82 82 | ##  Foo
83 83 | 
84    |-a = 1  ## Foo
   84 |+a = 1  # Foo
85 85 | 
86 86 | a = 1  #:Foo

E26.py:86:8: E262 (no-space-after-inline-comment) [*] Inline comment should start with `# `
   |
84 | a = 1  ## Foo
85 |
86 | a = 1  #:Foo
   |        ^^^^^ E262 (no-space-after-inline-comment)
   |
   = help: Format space

ℹ Safe fix
83 83 | 
84 84 | a = 1  ## Foo
85 85 | 
86    |-a = 1  #:Foo
   86 |+a = 1  #: Foo
